<resources>
    <string name="app_name">GMRBus</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string-array name="year_of_study">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="department">
        <item>IT</item>
        <item>CSE</item>
        <item>MECHANICAL</item>
        <item>EEE</item>
        <item>ECE</item>
        <item>CIVIL</item>
        <item>CHEMICAL</item>
    </string-array>

    <string-array name="busroute">
        <item>SRIKAKULAM</item>
        <item>VIZIANAGARAM</item>
        <item>BOBBILI</item>
    </string-array>

    <string-array name="RouteNumber">
        <item>Route 1</item>
        <item>Route 2</item>
        <item>Route 3</item>
        <item>VIZIANAGARAM</item>
        <item>BOBBILI</item>
    </string-array>

    <string-array name="BusNumbers">
        <item>Bus 1</item>
        <item>Bus 2</item>
        <item>Bus 3</item>
        <item>Bus 4</item>
        <item>Bus 5</item>
        <item>Bus 6</item>
        <item>Bus 7</item>
        <item>Bus 8</item>
    </string-array>

    <string-array name="coordinator">
        <item>Admin1</item>
        <item>Admin2</item>
        <item>Admin3</item>
    </string-array>

    <string name="Admin1">BcFAVCqDXScTCghYgMwDMiJnX372</string>
    <string name="Admin2">QXdPWE6QW6eYOZtBZCh7YKEOjNk1</string>
    <string name="Admin3">oh2RSmyU8fWU3ihdHGChjvpJ2Ad2</string>


    <string name="access_code">Access Code</string>
    <string name="pay_opt">Payment Option</string>
    <string name="card_type">Card Type</string>
    <string name="pay_button">Pay</string>
    <string name="next_button">Next</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="billingAddress">Billing Address</string>
    <string name="deliveryAddress">Delivery Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="tel">Telephone</string>
    <string name="email">Email Id</string>
    <string name="merchant_id">Merchant Id</string>
    <string name="currency">Currency</string>
    <string name="amount">Amount</string>
    <string name="redirect_url">Redirect Url</string>
    <string name="cancel_url">Cancel Url</string>
    <string name="card_number">Card Number</string>
    <string name="card_cvv">Card CVV</string>
    <string name="expiry_month">Expiry Month</string>
    <string name="expiry_year">Expiry Year</string>
    <string name="card_details">Card Details</string>
    <string name="issuing_bank">Issuing Bank</string>
    <string name="rsa_url">RSA Key Url</string>
    <string name="customer_identifier">Customer Identifier</string>
    <string name="emi_banks">EMI Banks</string>
    <string name="emi_card_name">Card Name</string>
</resources>